--- a/practiceindex.html/style.css
+++ b/practiceindex.html/style.css
@@ -9,7 +9,6 @@
     --font-size-sm:10px;
     --font-size-md:15px;
     --font-size-lg:20px
-
 }
 
 body{
@@ -55,13 +54,13 @@ h2{
     font-family: gilroy-bold;
     line-height: 94px;
 }
-h3{
+h1{
     color: var(--text-color-main-text, #141414);
     text-align: center;
     font-size: 18px;
     font-family: Gilroy-Medium;
     line-height: 28px;
-
+    display: flex;
 }
 
 button{
@@ -74,7 +73,7 @@ button{
 
 .container_id{
     border-radius: 24px;
-    border: 0.5px solid var(--primary-400, #005AE2);
+    border:--primary-400, #005AE2
     background: rgba(254, 254, 254, 0.10);
     backdrop-filter: blur(106px);
 
@@ -88,6 +87,154 @@ button{
     font-family: Gilroy-Medium;
     line-height: 24px;
 
+    display: inline-flex;
+padding: 40px 60px;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 16px;
+Style
+border-radius: 24px;
+border: 0.5px solid var(--primary-400, #005AE2);
+background: rgba(254, 254, 254, 0.10);
+backdrop-filter: blur(106px);
+
+}
+
+
+    .pricetag.price-active {
+        scale: 1.1 1.2;
+        margin-top: -2rem;
+        padding-top: 3rem;
+        padding-bottom: 6rem;
+    }
+  
+    .pricetag.price-active {
+        filter: drop-shadow(rgba(0, 0, 0, 0.05) 0px 4px 8px);
+        color: rgb(255, 255, 255);
+        background: linear-gradient(rgb(30, 52, 72) 99.99%, rgba(30, 52, 72, 0) 100%);
+    }
+   
+  
+    .pricetag {
+        display: flex;
+        flex-direction: column;
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 8px;
+        max-width: 550px;
+        cursor: pointer;
+        padding: 1.5rem 4rem 2.5rem;
+        border-width: 0.4px;    
+        border-color: rgb(0, 90, 226);
+        border-image: initial;
+        border-radius: 12px;
+    }
+    .pricetag_price_size{
+        align-content: center;
+    }
+    
+    * {
+        box-sizing: border-box;
+        padding: 0px;
+        margin: 0px;
+
+        
+    }
+    customer-price-btns {
+        flex-direction: row;
+        justify-content: center;
+    }
+   
+    customer-price-btns price-btns {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        gap: 0.8rem;
+    }
+
+    * {
+        box-sizing: border-box;
+        padding: 0px;
+        margin: 0px;
+    }
+    
+    
+    customer-pricing-btn {
+        width: 15rem;
+        
+    }
+   
+    .btn-blue, .btn-white:hover {
+        background-color: rgb(0, 101, 254);
+        color: rgb(255, 255, 255);
+    }
+    
+    .btn {
+        display: inline-block;
+        font-family: gilroy-medium, sans-serif;
+        padding: 1rem 2rem;
+        border-radius: 100px;
+        transition: all 0.5s ease-in 0s;
+        border-width: 1px;
+        border-style: solid;
+        border-color: rgb(0, 101, 254);
+        border-image: initial;
+       
+    }
+    
+    a {
+        color: rgb(20, 20, 20);
+        text-decoration: none;
+    }
+    
+    * {
+        box-sizing: border-box;
+        padding: 0px;
+        margin: 0px;
+    }
+    
+    a:-webkit-any-link {
+        color: -webkit-link;
+        cursor: pointer;
+    }
+    
+    customer-price-btns {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        gap: 0.8rem;
+        
+    }
+    .form {
+        position: relative;
+        background: linear-gradient(rgb(30, 52, 72) 99.99%, rgba(30, 52, 72, 0) 100%);
+        text-align: center;
+    }
+  
+    section {
+        padding-block: 5rem;
+    }
+    
+    * {
+        box-sizing: border-box;
+        padding: 0px;
+        margin: 0px;
+    }
+    
+    section {
+        display: block;
+    }
+   
+    body {
+        font-family: gilroy-medium, sanserif;
+        line-height: 1.5;
+    }
+    
+
+.circle.id{
+    border-radius: 12px;
+border-color: #FFF;
+background: var(--primary-400, #005AE2);
+box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
 }
 
 ellipse{
@@ -124,6 +271,104 @@ ellipse{
     font-size: 16px;
     font-family: Gilroy-Medium;
     line-height: 24px;
+}
+
+section {
+    padding-block: 5rem;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+section {
+    display: block;
+}
+
+.pricing-title-container {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    text-align: center;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+@media screen and (min-width: 900px)
+.views-title, .features-title, .pricing-title {
+    font-size: 2.5rem;
+}
+.features-title {
+    margin-bottom: 1rem;
+  
+}
+.views-title, .features-title {
+    font-size: 2rem;
+}
+h1, h2, h3, h4 {
+    font-family: 'gilroy-bold', sanserif;
+}
+:-webkit-any(article, aside, nav, section) h1 {
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+}
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+.pricing-title-container {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    text-align: center;
+}
+.pricing-title-container {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    text-align: center;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+div {
+    display: block;
+}
+.pricing-take {
+    text-align: center;
+    max-width: 600px;
+    margin: 0 auto;
+    margin-block-end: 5rem;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+div {
+    display: block;
+}
+body {
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'gilroy-medium', sanserif;
+    line-height: 1.5;
 }
 
 .data_container{
@@ -251,11 +496,11 @@ body{
 .fa, .fa-brands, .fa-classic, .fa-regular, .fa-sharp, .fa-solid, .fab, .far, .fas {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    display: var(--fa-display,inline-block);
+    display: flex;
     font-style: normal;
     font-variant: normal;
     line-height: 1;
-    text-rendering: auto;
+    text-rendering: auto; 
 }
 
 button {
@@ -281,7 +526,7 @@ button {
 
 .question-header-title {
     font-size: 1.25rem;
-    @media screen and (min-width: 950px)
+    @media screen and (min-width: 950px)   
 }
 
 h1, h2, h3, h4 {
@@ -327,6 +572,7 @@ body {
 }
 .question-header-title {
     font-size: 1.1rem;
+    align-items: center;
 }
 
 article {
@@ -336,58 +582,228 @@ article {
 .question-btn {
     background: none;
     border: none;
+    
 }
-
-button {
-    appearance: auto;
-    font-style: ;
-    font-variant-ligatures: ;
-    font-variant-caps: ;
-    font-variant-numeric: ;
-    font-variant-east-asian: ;
-    font-variant-alternates: ;
-    font-weight: ;
-    font-stretch: ;
-    font-size: ;
-    font-family: ;
-    font-optical-sizing: ;
-    font-kerning: ;
-    font-feature-settings: ;
-    font-variation-settings: ;
-    text-rendering: auto;
-    color: buttontext;
-    letter-spacing: normal;
-    word-spacing: normal;
-    line-height: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    display: inline-block;
-    text-align: center;
-    align-items: flex-start;
-    cursor: default;
-    box-sizing: border-box;
-    background-color: buttonface;
-    margin: 0em;
-    padding: 1px 6px;
-    border-width: 2px;
-    border-style: outset;
-    border-color: buttonborder;
-    border-image: initial;
 
 :host, :root {
     --fa-style-family-brands: "Font Awesome 6 Brands";
     --fa-font-brands: normal 400 1em/1 "Font Awesome 6 Brands";
 }
+
+.optimize {
+    background: linear-gradient(180deg, #1e3448 99.99%, rgba(30, 52, 72, 0) 100%);
+    position: relative;
+    overflow-y: hidden;
+    
+    align-items: center;
 }
-ul{
+
+body {
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'gilroy-medium', sanserif;
+    line-height: 1.5;
+}
+
+h1{
     display: flex;
-    gap:2rem
+    align-items: center;
 }
+
+
+section{
+    padding-block: 5rem
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+section {
+    display: block;
+}
+
+.optimize h1 {
+    text-align: center;
+    color: #fff;
+    margin-bottom: 2rem;
+}
+
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+:-webkit-any(article, aside, nav, section) h1 {
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+}
+
+h1 {
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.optimize-botten {
+    text-align: center;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+div {
+    display: block;
+}
+body {
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'gilroy-medium', sanserif;
+    line-height: 1.5;
+}
+h1, h2, h3, h4 {
+    font-family: 'gilroy-bold', sanserif;
+}
+{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body {
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'gilroy-medium', sanserif;
+    line-height: 1.5;
+}
+{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+    color: #141414;
+}
+
+div {
+    display: block;
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+:host, :root {
+    --fa-style-family-brands: "Font Awesome 6 Brands";
+    --fa-font-brands: normal 400 1em/1 "Font Awesome 6 Brands";
+}
+h3 {
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+
+body {
+    /* font-family: 'Inter', sans-serif; */
+    font-family: 'gilroy-medium', sanserif;
+    line-height: 1.5;
+}
+
+.footer-socials {
+    gap: 1.5rem;
+    margin-top: 1rem;
+    display: grid;
+}
+footer-center{
+    display: grid;
+}
+.logo link{
+    padding: 0;
+    display: block;
+    margin: 0;
+    box-sizing: border-box;
+    display: flex;
+}
+li {
+    list-style: none;
+    display: list-item;
+    text-align: -webkit-match-parent;   
+    
+}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+ul {
+    display: flex;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    gap:2rem 
+    
+              
+}
+
+div {
+    display: block;
+}
+
+.footer_note_container{
+    text-align: center;
+}
+
+.footer-end {
+    margin-top: 4rem;
+    text-align: right;
+    font-size: 14px;
+}
+* {
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+}
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+body {
+    font-family: gilroy-medium, sanserif;
+    line-height: 1.5;
+}
+
 span{
     color:blue
 }
-
 
 .price{
     width:10rem;
@@ -399,15 +815,16 @@ span{
     gap: 2rem;
 }
 
+.price-option{
+display: inline-flex;
+padding: 24px 98px 45px 87px;
+flex-direction: column;
+align-items: flex-start;
+gap: 34px;
 
-.sec{
-    width: 50rem;
-    height: 5rem;
-    
-    margin-top: 3rem;
-    margin: 0 auto;
-}
-
-#up{
-    transform: translateY(-2rem);
+border-radius: 12px;
+border: 0.4px solid var(--primary-400, #005AE2);
+background: var(--neutral-white, #FFF);
+/* Drop shadow */
+box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
 }
